--- a/NomadMapApp/composeApp/src/androidMain/res/values/strings.xml
+++ b/NomadMapApp/composeApp/src/androidMain/res/values/strings.xml
@@ -32,4 +32,9 @@
     <string name="apply">Aplicar</string>
     <string name="list">Llista</string>
     <string name="map">Mapa</string>
+    <string name="register">Registrar-se</string>
+    <string name="create_account">Crear un compte</string>
+    <string name="confirm_password">Confirmar contrasenya</string>
+    <string name="registration_success">Registre completat amb èxit</string>
+    <string name="address_unavailable">No disponible</string>
 </resources>
